--- a/resources/web/creator_pieces.html
+++ b/resources/web/creator_pieces.html
@@ -312,8 +312,8 @@
   <div class="modal-dialog">
 
     <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">Bid</h4>
+            <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        <h4 class="modal-title">Bid</h4>
       </div>
       <div class="modal-body">
         <form id="bidForm" class="form-horizontal" role="form">
@@ -400,8 +400,8 @@
   <div class="modal-dialog">
 
     <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">buy</h4>
+            <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        <h4 class="modal-title">buy</h4>
       </div>
       <div class="modal-body">
         <form id="buyForm" class="form-horizontal" role="form">
@@ -473,8 +473,8 @@
   <div class="modal-dialog">
 
     <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">Deposit</h4>
+            <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        <h4 class="modal-title">Deposit</h4>
       </div>
       <div id="deposit_div" class="modal-body">
        <script id="deposit_template" type="x-tmpl-mustache">
@@ -490,8 +490,8 @@
   <div class="modal-dialog">
 
     <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">Ask</h4>
+            <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        <h4 class="modal-title">Ask</h4>
       </div>
       <div class="modal-body">
         <form id="askForm" class="form-horizontal" role="form">
@@ -580,8 +580,8 @@
   <div class="modal-dialog">
 
     <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">Issue Pieces</h4>
+            <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        <h4 class="modal-title">Issue Pieces</h4>
       </div>
       <div class="modal-body">
         <form id="issueForm" class="form-horizontal" role="form">
@@ -659,8 +659,8 @@
   <div class="modal-dialog">
 
     <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">withdraw</h4>
+            <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        <h4 class="modal-title">withdraw</h4>
       </div>
       <div class="modal-body">
         <form id="withdrawForm" class="form-horizontal" role="form">
@@ -732,8 +732,8 @@
   <div class="modal-dialog">
 
     <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">Change Reward</h4>
+            <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        <h4 class="modal-title">Change Reward</h4>
       </div>
       <div class="modal-body">
         <div class="text">
