--- a/resources/web/creatorpage_template_old_backup.html
+++ b/resources/web/creatorpage_template_old_backup.html
@@ -112,8 +112,8 @@
 	<div class="modal-dialog modal-sm">
 
 		<div class="modal-content">
-			<div class="modal-header">
-				<h4 class="modal-title">Bid</h4>
+			      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>				<h4 class="modal-title">Bid</h4>
 			</div>
 			<div class="modal-body">
 				<form id="bidForm" class="form-horizontal" role="form">
@@ -160,8 +160,8 @@
 	<div class="modal-dialog modal-sm">
 
 		<div class="modal-content">
-			<div class="modal-header">
-				<h4 class="modal-title">Ask</h4>
+			      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>				<h4 class="modal-title">Ask</h4>
 			</div>
 			<div class="modal-body">
 				<form id="askForm" class="form-horizontal" role="form">
