--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -412,7 +412,12 @@
           <div class="form-group form-group-lg">
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Date</label>
             <div class="col-sm-10">
-              <input name="validUntil" class="form-control datepicker" type="text" id="formGroupInputLarge" placeholder="Valid Until...">
+              <input name="validUntil" class="form-control datepicker" type="text" id="formGroupInputLarge" placeholder="Valid Until..."
+data-bv-notempty="true"
+data-bv-notempty-message="Must have an expiration date"
+>
+
+
             </div>
           </div>
           <div class="form-group form-group-lg">
@@ -612,7 +617,12 @@
         <div class="form-group form-group-lg">
           <label class="col-sm-2 control-label" for="formGroupInputLarge">Date</label>
           <div class="col-sm-10">
-            <input name="validUntil" class="form-control datepicker" type="text" id="formGroupInputLarge" placeholder="Valid Until...">
+            <input name="validUntil" class="form-control datepicker" type="text" id="formGroupInputLarge" placeholder="Valid Until..."
+data-bv-notempty="true"
+data-bv-notempty-message="Must have an expiration date"
+>
+
+
           </div>
         </div>
         <div class="form-group form-group-lg">
