--- a/resources/testweb/creatorpage_template_old_backup.html
+++ b/resources/testweb/creatorpage_template_old_backup.html
@@ -145,8 +145,7 @@
 						<label class="col-sm-2 control-label" for="formGroupInputLarge">Date</label>
 						<div class="col-sm-10">
 							<input name="validUntil" class="form-control datepicker" type="text" id="formGroupInputLarge" placeholder="Valid Until..."
-data-bv-notempty="true"
-data-bv-notempty-message="Must have an expiration date"
+required data-bv-notempty-message="Must have an expiration date"
 >
 
 
@@ -198,8 +197,7 @@ data-bv-notempty-message="Must have an expiration date"
 						<label class="col-sm-2 control-label" for="formGroupInputLarge">Date</label>
 						<div class="col-sm-10">
 							<input name="validUntil" class="form-control datepicker" type="text" id="formGroupInputLarge" placeholder="Valid Until..."
-data-bv-notempty="true"
-data-bv-notempty-message="Must have an expiration date"
+required data-bv-notempty-message="Must have an expiration date"
 >
 
 
