--- a/resources/web/creator_rewards.html
+++ b/resources/web/creator_rewards.html
@@ -343,8 +343,7 @@
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Date</label>
             <div class="col-sm-10">
               <input name="validUntil" class="form-control datepicker" type="text" id="formGroupInputLarge" placeholder="Valid Until..."
-data-bv-notempty="true"
-data-bv-notempty-message="Must have an expiration date"
+required data-bv-notempty-message="Must have an expiration date"
 >
 
 
@@ -526,8 +525,7 @@ data-bv-notempty-message="Must have an expiration date"
           <label class="col-sm-2 control-label" for="formGroupInputLarge">Date</label>
           <div class="col-sm-10">
             <input name="validUntil" class="form-control datepicker" type="text" id="formGroupInputLarge" placeholder="Valid Until..."
-data-bv-notempty="true"
-data-bv-notempty-message="Must have an expiration date"
+required data-bv-notempty-message="Must have an expiration date"
 >
 
 
