--- a/resources/testweb/creator_pricing.html
+++ b/resources/testweb/creator_pricing.html
@@ -323,9 +323,7 @@
           <div class="form-group form-group-lg">
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Date</label>
             <div class="col-sm-10">
-              <input name="validUntil" class="form-control datepicker" type="text" id="formGroupInputLarge" placeholder="Valid Until..."
-required data-bv-notempty-message="Must have an expiration date"
->
+              <input name="validUntil" class="form-control datepicker" type="text" id="formGroupInputLarge" placeholder="Valid Until...">
 
 
             </div>
@@ -524,9 +522,7 @@ required data-bv-notempty-message="Must have an expiration date"
         <div class="form-group form-group-lg">
           <label class="col-sm-2 control-label" for="formGroupInputLarge">Date</label>
           <div class="col-sm-10">
-            <input name="validUntil" class="form-control datepicker" type="text" id="formGroupInputLarge" placeholder="Valid Until..."
-required data-bv-notempty-message="Must have an expiration date"
->
+            <input name="validUntil" class="form-control datepicker" type="text" id="formGroupInputLarge" placeholder="Valid Until...">
 
 
           </div>
