--- a/resources/web/userdashboard_overview.html
+++ b/resources/web/userdashboard_overview.html
@@ -165,10 +165,8 @@
         <h1> <span id="page_title"></span> <small> overview</small> </h1> 
       </div>
       <div class="col-md-6">
-        <button id="depositBtn" type="button" class="btn btn-primary btn-lg pull-right hide" data-toggle="modal" data-target="#depositModal">Deposit
-        </button>
-        <button id="withdrawBtn" type="button" class="btn btn-primary btn-lg pull-right hide" data-toggle="modal" data-target="#withdrawModal">Withdraw
-        </button>
+        <button id="depositBtn" type="button" class="btn btn-default btn-lg pull-right hide" data-toggle="modal" data-target="#depositModal">Deposit</button>
+        <button id="withdrawBtn" type="button" class="btn btn-default btn-lg pull-right hide" data-toggle="modal" data-target="#withdrawModal">Withdraw</button>
 
       </div>
       <div class="col-md-12">
