--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -320,11 +320,8 @@
 
 
     </div>
-
-
-
-  </div>
-          <div class="row">
+    <div class="container">
+        <div class="row">
       <div id="disqus_thread"></div>
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
@@ -357,6 +354,10 @@
       &middot; <a href="/FAQ">Support</a> &middot; <a href="https://github.com/tchoulihan/bitpieces">Github</a></p>
       </footer>
       
+
+
+</div>
+  </div>
 
 </div>
 
