--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -174,6 +174,7 @@
                       <th>Price/piece <i class="fa fa-sort"></th>
                       <th>Reward/piece/year <i class="fa fa-sort"></th>
                       <th>Reward yield <i class="fa fa-sort"></th>
+                      <th>Creators safety <i class="fa fa-sort"></th>
                     </tr>
                   </thead>
 
@@ -189,6 +190,7 @@
                       <td>{{price_current}}</td>
                       <td>{{reward_current}}</td>
                       <td>{{reward_yield_current}}</td>
+                      <td>{{creators_safety}}</td>
                     </tr>
                     {{/.}}
 
