--- a/resources/web/creators_register.html
+++ b/resources/web/creators_register.html
@@ -159,7 +159,7 @@
               <div class="panel-body">
 
                <div class="register">
-                <h3> Register </h3>
+                <h3> Register <small><a href="/creators_register">Creator register</a> </small></h3>
                 <hr></hr>
 
                 <form id="creatorRegisterForm" class="form-horizontal" role="form"
