--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -279,7 +279,7 @@
             <div class="modal-dialog modal-lg">
               <div class="modal-content">
                       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                   <h4 class="modal-title" id="userloginModalLabel">Sign in or Register</h4>
                 </div>
 
