--- a/resources/testweb/testing_home.html
+++ b/resources/testweb/testing_home.html
@@ -171,7 +171,7 @@
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
               <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button> 
           <h4 class="modal-title" id="userloginModalLabel">Sign in or Register</h4>
         </div>
 
@@ -270,7 +270,7 @@
   </tr>
 </table>-->
 <hr>
-<h3> Register <small><a href="/creators_register">Creator register</a> </small></h3>
+<h3> Register     <small><a href="/creators_register">Creator register</a> </small></h3>
 
 <form id="registerForm" class="form-horizontal" role="form"
 data-bv-message="This value is not valid"
