--- a/resources/web/testing_home.html
+++ b/resources/web/testing_home.html
@@ -270,7 +270,7 @@
   </tr>
 </table>
 <hr>
-<h3> Register     <small><a href="/creators_register">Creator register</a> </small></h3>
+<h3> Register &nbsp;&nbsp;&nbsp; <small><a href="/creators_register">Creator register</a> </small></h3>
 
 <form id="registerForm" class="form-horizontal" role="form"
 data-bv-message="This value is not valid"
