--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -171,7 +171,7 @@
 
   <!-- The Page -->
   <div class="row-fluid">
-    <div id="othermain_col" class="col-md-8 col-md-offset-2" >
+    <div class="othermain_col col-md-8 col-md-offset-2" >
 
 
 
@@ -320,8 +320,9 @@
 
 
     </div>
-    <div class="container">
-        <div class="row">
+    
+     <div class="row-fluid">
+    <div class="othermain_col col-md-8 col-md-offset-2" >
       <div id="disqus_thread"></div>
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
