trying dashes instead

--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -171,7 +171,7 @@
 
   <!-- The Page -->
   <div class="row-fluid">
-    <div class="othermain_col col-md-8 col-md-offset-2" >
+    <div class="othermain-col col-md-8 col-md-offset-2" >
 
 
 
@@ -320,9 +320,9 @@
 
 
     </div>
-    
+
      <div class="row-fluid">
-    <div class="othermain_col col-md-8 col-md-offset-2" >
+    <div class="othermain-col col-md-8 col-md-offset-2" >
       <div id="disqus_thread"></div>
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
