--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -323,7 +323,7 @@
 
     
     <div class="othermain-col col-md-8 col-md-offset-2">
-      <div class="row">
+    <div class="row-fluid">
         <div id="disqus_thread"></div>
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
@@ -350,15 +350,17 @@
     </div>
     <!-- FOOTER -->
   </div>
-
-  </div>
+  <div class="row">
     <hr class="featurette-divider">
     <footer>
       <p class="pull-right"><a href="#">Back to top</a></p>
       <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="about">About</a> &middot; <a href="contact">Contact</a>
         &middot; <a href="/FAQ">Support</a> &middot; <a href="https://github.com/tchoulihan/bitpieces">Github</a></p>
       </footer>
+    </div>
 
+
+  </div>
 
 
 </div>
