--- a/resources/testweb/userdashboard_overview.html
+++ b/resources/testweb/userdashboard_overview.html
@@ -409,7 +409,7 @@
                     <td>{{creators_name}}</td>
                     <td>{{type}}</td>
                     <td>{{pieces}}</td>
-                    <td>{{price_per_piece}} <button id="remove_button" class="btn btn-danger btn-xs pull-right"><i class="fa fa-trash-o"></i></button></td>
+                    <td>{{price_per_piece}} <button class="remove-button btn btn-danger btn-xs pull-right hide"><i class="fa fa-trash-o"></i></button></td>
                   </tr>
                   {{/.}}
 
