--- a/resources/testweb/creator_settings.html
+++ b/resources/testweb/creator_settings.html
@@ -166,7 +166,7 @@
 
 
     <!-- The Page -->
-    <div id="main_col" class="col-md-12 main">
+   <div class="main-col col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2">
 
 
       <div class="row">
