--- a/resources/testweb/creator_funds.html
+++ b/resources/testweb/creator_funds.html
@@ -163,7 +163,7 @@
 
 
   <!-- The Page -->
-  <div id="main_col" class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 main">
+   <div class="main-col col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2">
 
 
 
