--- a/resources/testweb/creator_rewards.html
+++ b/resources/testweb/creator_rewards.html
@@ -160,7 +160,7 @@
 
 
   <!-- The Page -->
-  <div id="main_col" class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 main">
+ <div class="main-col col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2">
 
    <div class="row">
     <div class="col-md-12">
