--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -285,7 +285,9 @@
 
                   <div class="modal-body">
 
-                    <h3> Sign in </h3>
+                    <h3> Sign in &nbsp;&nbsp;&nbsp; 
+                    <small> <a href="#" data-toggle="modal" data-target="#recoverPasswordModal">Recover password </a> </small></h3>
+
                     <form id="loginForm" class="form-horizontal" role="form">
                       <div id="userLoginDiv" class="form-group">
                         <label for="inputUsername3" class="col-sm-2 control-label">Username</label>
@@ -343,10 +345,9 @@
                       </div>
                     </div>
 
-                    <div class="col-sm-offset-2 col-sm-10">
-                      <a href="#" data-toggle="modal" data-target="#recoverPasswordModal">Recover password </a>
-                    </div>
-                    </br>
+                
+                     
+
                     <div class="form-group">
                       <div class="col-sm-offset-2 col-sm-10">
                         <button id="signinBtn" type="submit" class="btn btn-primary">Sign in</button>
