--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -292,7 +292,7 @@
                       <div id="userLoginDiv" class="form-group">
                         <label for="inputUsername3" class="col-sm-2 control-label">Username</label>
                         <div class="col-sm-10">
-                          <input name="username" type="Username" class="form-control" id="inputUsername3" placeholder="Username"
+                          <input name="username" type="Username" class="form-control" id="inputUsername3" placeholder="Username or Email"
                           data-bv-message="The username is not valid"
 
                           data-bv-notempty="true"
@@ -551,7 +551,7 @@
        <div class="form-group">
          <label for="inputUsername4" class="col-sm-2 control-label">Username</label>
          <div class="col-sm-10">
-          <input name="username" type="Username" class="form-control" id="inputUsername4" placeholder="Username"
+          <input name="username" type="Username" class="form-control" id="inputUsername4" placeholder="Username or Email"
           data-bv-message="The username is not valid"
 
           data-bv-notempty="true"
