--- a/resources/testweb/creators_register.html
+++ b/resources/testweb/creators_register.html
@@ -448,7 +448,7 @@
 
        <!-- my scripts -->
        <script src="tools.js"></script>
-       <script src="login.js"></script>
+       <script src="common.js"></script>
        <script src="userdashboard_settings.js"></script>
        <script src="creators_register.js"></script>
 
