--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -607,6 +607,7 @@
 
       <!--   My scripts -->
       <script src="tools.js"></script>
+      <script src="common.js"></script>
       <script src="login.js"></script>
 
 
