--- a/resources/web/creator_overview.html
+++ b/resources/web/creator_overview.html
@@ -798,7 +798,7 @@
       <script src="highcharts_templates.js"></script>
       <script src="creatorpage.js"></script>
       <script src="creator_overview.js"></script>
-      <script src="login.js"></script>
+      <script src="common.js"></script>
 
 
     </body>
