--- a/resources/web/discover.html
+++ b/resources/web/discover.html
@@ -258,7 +258,7 @@
       <script src="highcharts_templates.js"></script>
       <script src="userdashboard.js"></script>
       <script src="discover.js"></script>
-      <script src="login.js"></script>
+      <script src="common.js"></script>
 
     </body>
     </html>
