--- a/resources/web/landing.html
+++ b/resources/web/landing.html
@@ -552,7 +552,7 @@
 
       <!--   My scripts -->
       <script src="tools.js"></script>
-      <script src="login.js"></script>
+      <script src="common.js"></script>
 
 
     </body>
