--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -1029,7 +1029,7 @@
       <script src="highcharts_templates.js"></script>
       <script src="creatorpage.js"></script>
       <script src="creator_main.js"></script>
-      <script src="login.js"></script>
+      <script src="common.js"></script>
 
 
     </body>
