--- a/resources/testweb/creator_pricing.html
+++ b/resources/testweb/creator_pricing.html
@@ -788,7 +788,7 @@
       <script src="highcharts_templates.js"></script>
       <script src="creatorpage.js"></script>
       <script src="creator_pricing.js"></script>
-      <script src="login.js"></script>
+      <script src="common.js"></script>
 
 
     </body>
