--- a/resources/testweb/creator_rewards.html
+++ b/resources/testweb/creator_rewards.html
@@ -809,7 +809,7 @@
       <script src="highcharts_templates.js"></script>
       <script src="creatorpage.js"></script>
       <script src="creator_rewards.js"></script>
-      <script src="login.js"></script>
+      <script src="common.js"></script>
 
 
     </body>
