--- a/resources/testweb/creator_settings.html
+++ b/resources/testweb/creator_settings.html
@@ -306,7 +306,7 @@
       <script src="highcharts_templates.js"></script>
       <script src="creatorpage.js"></script>
       <script src="userdashboard_settings.js"></script>
-      <script src="login.js"></script>
+      <script src="common.js"></script>
 
 
     </body>
