--- a/resources/testweb/testing_home.html
+++ b/resources/testweb/testing_home.html
@@ -505,6 +505,7 @@
       <script src="tools.js"></script>
       <script src="highcharts_templates.js"></script>
       
+      <script src="common.js"></script>
       <script src="login.js"></script>
 
 
