--- a/resources/testweb/userdashboard_overview.html
+++ b/resources/testweb/userdashboard_overview.html
@@ -570,7 +570,7 @@
       <script src="highcharts_templates.js"></script>
       <script src="userdashboard.js"></script>
       <script src="userdashboard_overview.js"></script>
-      <script src="login.js"></script>
+      <script src="common.js"></script>
 
     </body>
     </html>
