--- a/resources/web/about.html
+++ b/resources/web/about.html
@@ -184,7 +184,7 @@
       <script src="tools.js"></script>
       <script src="highcharts_templates.js"></script>
       
-      <script src="login.js"></script>
+      <script src="common.js"></script>
 
 
     </body>
