--- a/resources/web/creator_pieces.html
+++ b/resources/web/creator_pieces.html
@@ -805,7 +805,7 @@
       <script src="highcharts_templates.js"></script>
       <script src="creatorpage.js"></script>
       <script src="creator_pieces.js"></script>
-      <script src="login.js"></script>
+      <script src="common.js"></script>
 
 
     </body>
