--- a/resources/web/creatordashboard.html
+++ b/resources/web/creatordashboard.html
@@ -311,7 +311,7 @@
       <!-- my scripts -->
       <script src="tools.js"></script>
       <script src="userdashboard.js"></script>
-      <script src="login.js"></script>
+      <script src="common.js"></script>
 
     </body>
     </html>
