--- a/resources/web/creatordashboardcustomize.html
+++ b/resources/web/creatordashboardcustomize.html
@@ -168,7 +168,7 @@
       <!-- my scripts -->
       <script src="tools.js"></script>
       <script src="userdashboard.js"></script>
-      <script src="login.js"></script>
+      <script src="common.js"></script>
       <script src="creatordashboardcustomize.js"></script>
 
     </body>
