--- a/resources/web/testing_home.html
+++ b/resources/web/testing_home.html
@@ -447,7 +447,7 @@ data-bv-feedbackicons-validating="glyphicon glyphicon-refresh">
       <script src="tools.js"></script>
       <script src="highcharts_templates.js"></script>
       
-      <script src="login.js"></script>
+      <script src="common.js"></script>
 
 
     </body>
