--- a/resources/web/userdashboard_funds.html
+++ b/resources/web/userdashboard_funds.html
@@ -250,7 +250,7 @@
       <script src="tools.js"></script>
       <script src="highcharts_templates.js"></script>
       <script src="userdashboard.js"></script>
-      <script src="login.js"></script>
+      <script src="common.js"></script>
       <script src="userdashboard_funds.js"></script>
 
     </body>
