--- a/resources/web/userdashboard_overview.html
+++ b/resources/web/userdashboard_overview.html
@@ -545,7 +545,7 @@
       <script src="highcharts_templates.js"></script>
       <script src="userdashboard.js"></script>
       <script src="userdashboard_overview.js"></script>
-      <script src="login.js"></script>
+      <script src="common.js"></script>
 
     </body>
     </html>
