--- a/resources/web/userdashboard_settings.html
+++ b/resources/web/userdashboard_settings.html
@@ -392,7 +392,7 @@
       <script src="highcharts_templates.js"></script>
       <script src="userdashboard.js"></script>
       <script src="userdashboard_settings.js"></script>
-      <script src="login.js"></script>
+      <script src="common.js"></script>
 
     </body>
     </html>
