--- a/resources/testweb/contact.html
+++ b/resources/testweb/contact.html
@@ -132,13 +132,12 @@
 
      <div class="row">
        <div class="col-md-12">
-          For bugs, feature requests, or any issues with the website, report an issue on the <a href="https://github.com/tchoulihan/bitpieces">github repository</a>.
+          For bugs, feature requests, or any issues with the website, create a new issue on the <a href="https://github.com/tchoulihan/bitpieces">github repository</a>.
 
            <br><br>
 
-
           For all inquiries about making an account and raising funds, send an email to <a href="mailto:bitpieces22@gmail.com?Subject=CreatorInquiry" target="_top">
-          bitpieces22verify@gmail.com</a>
+          bitpieces22@gmail.com</a>
 
          <br><br>
 
