--- a/resources/testweb/creator_overview.html
+++ b/resources/testweb/creator_overview.html
@@ -775,7 +775,7 @@
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Reward per piece per year</label>
             <div class="col-sm-10">
              <div class="input-group">
-               <span name="curr_iso" class="input-group-addon">$</span>    
+               <span name="curr_iso" class="input-group-addon"></span>    
                <input name="reward_per_piece_per_year" class="form-control" type="text" id="formGroupInputLarge" placeholder="Reward/piece/year"
 
                data-bv-notempty="true"
