--- a/resources/testweb/FAQ.html
+++ b/resources/testweb/FAQ.html
@@ -140,6 +140,7 @@
             <li><a href="#what_are_rewards">What are rewards?<i class="fa fa-chevron-right pull-right"></i></a></li>
             <li><a href="#why_are_rewards_mandatory">Why are rewards mandatory?<i class="fa fa-chevron-right pull-right"></i></a></li>
             <li><a href="#how_are_rewards_calculated">How are rewards calculated?  <i class="fa fa-chevron-right pull-right"></i></a></li>
+            <li><a href="#how_is_worth_calculated">How is worth calculated?  <i class="fa fa-chevron-right pull-right"></i></a></li>
             <li><a href="#does_price_affect_rewards">Does price affect rewards?<i class="fa fa-chevron-right pull-right"></i></a></li>
             <li><a href="#how_do_i_know_if_a_creator_is_safe">How do I know if a creator is safe?<i class="fa fa-chevron-right pull-right"></i></a></li>
             <li><a href="#what_are_bids_and_asks">What are bids and asks? <i class="fa fa-chevron-right pull-right"></i></a></li>
@@ -182,7 +183,7 @@
         <div id="what_is_a_creator">   
           <h2 class="">What is a creator?</h2>
           A creator is the term Bitpieces uses to refer to the content-creators who 
-          are issuing pieces to raise funds.
+          are issuing pieces to raise funds. A creator is not a project; it is a <b>brand</b>, which could potentially run many projects. A creator can refer to a single person, a group of people, or a company trying to raise money.
           <hr class="col-md-12">
         </div>
         <div id="what_are_rewards">
@@ -230,6 +231,21 @@
           $505 dollars. Likewise, after one year, if all the pieces are bought, a creator will owe 
           around $50 per year to their funders. Using the rule of 72, they should be able to pay their
           funders for 35 years before they reach half their initial funds.
+
+          <hr class="col-md-12">
+        </div>
+
+        <div id="how_is_worth_calculated">
+          <h2 class="">How is worth calculated?</h2>
+          After a creator sells all their pieces, funders may want to bid and ask on the pieces that are already
+          in the market. This means that if a piece was initially sold for $1, someone might be willing to buy it later on at 
+          $2. 
+          <br><br> 
+          This means that there are two distinct numbers for a creator's value: <b>Worth</b>, and funds raised. While funds raised is
+          simply the money that the creators made by selling pieces to funders, worth is the total value of all the pieces combined.
+          <br><br>
+          If a creator raised $100, by selling 100 pieces at $1/piece, and the price per piece later on increases to $2, then the 
+          creators worth is now $200, and the funds they raised is still $100.
 
           <hr class="col-md-12">
         </div>
