--- a/resources/testweb/FAQ.html
+++ b/resources/testweb/FAQ.html
@@ -171,13 +171,16 @@
           <h2>What are pieces?</h2>
           Pieces are little entities guaranteeing you rewards from a creator. In a sense,
           they represent your contribution to a creator's brand. When you buy pieces from a 
-          <a href="#what_is_a_creator"> creator</a>, you are helping them fund their work.
+          <a href="#what_is_a_creator"> creator</a>, you are helping them fund their work. Also, when you buy pieces,
+           monetary rewards immediately and automatically start building in your account, which you can withdraw at any time. 
+          <br><br>
           As their brand becomes more(or less)
           valuable, your pieces may rise or fall in value, based on the their brand strength,
           popularity, or supply and demand. However, the <a href="#what_are_rewards">rewards</a>
           you collect are unaffected by changes in the price or value of your pieces. 
           <br><br>Once you own pieces from a creator, you can <a href="#what_are_bids_and_asks">bid,
           and ask</a>, to sell your pieces on an open market.
+
           <hr class="col-md-12">
         </div> 
         <div id="what_is_a_creator">   
