--- a/resources/testweb/FAQ.html
+++ b/resources/testweb/FAQ.html
@@ -143,6 +143,7 @@
             <li><a href="#how_is_worth_calculated">How is worth calculated?  <i class="fa fa-chevron-right pull-right"></i></a></li>
             <li><a href="#does_price_affect_rewards">Does price affect rewards?<i class="fa fa-chevron-right pull-right"></i></a></li>
             <li><a href="#how_do_i_know_if_a_creator_is_safe">How do I know if a creator is safe?<i class="fa fa-chevron-right pull-right"></i></a></li>
+            <li><a href="#whats_the_difference_between_buying_and_bidding">What's the difference between buying and bidding? <i class="fa fa-chevron-right pull-right"></i></a></li>
             <li><a href="#what_are_bids_and_asks">What are bids and asks? <i class="fa fa-chevron-right pull-right"></i></a></li>
             <li><a href="#what_are_the_fees">What are the fees for using Bitpieces?<i class="fa fa-chevron-right pull-right"></i></a></li>
             <li><a href="#why_use_bitcoin_instead_of_dollars">Why use Bitcoin instead of dollars?<i class="fa fa-chevron-right pull-right"></i></a></li>
@@ -325,6 +326,14 @@
 
           <hr class="col-md-12">
         </div>
+
+         <div id="whats_the_difference_between_buying_and_bidding">
+          <h2 class="">What's the difference between buying and bidding?</h2>
+            The <b>buy</b> button buys pieces from a creator directly, at a fixed price that they choose. The bid button
+            is an open request to buy pieces from <b>another funder</b>, at whatever price you are willing to pay. See 
+            <a href="#what_are_bids_and_asks">below</a> for more information.
+            <hr class="col-md-12">
+          </div>
 
         <div id="what_are_bids_and_asks">
           <h2 class="">What are bids and asks?</h2>
