--- a/resources/testweb/FAQ.html
+++ b/resources/testweb/FAQ.html
@@ -173,7 +173,7 @@
           Pieces are little entities guaranteeing you rewards from a creator. In a sense,
           they represent your contribution to a creator's brand. When you buy pieces from a 
           <a href="#what_is_a_creator"> creator</a>, you are helping them fund their work. Also, when you buy pieces,
-           monetary rewards immediately and automatically start building in your account, which you can withdraw at any time. 
+           monetary rewards <b>immediately and automatically</b> start building in your account, which you can withdraw at any time. 
           <br><br>
           As their brand becomes more(or less)
           valuable, your pieces may rise or fall in value, based on the their brand strength,
@@ -287,7 +287,7 @@
               then why should they be forced to reward their creators right away?
               <br><br>
               The answer is this: security. Rewards, no matter how miniscule the amount, help to establish 
-              a <a href="why_are_rewards_mandatory">history of trust</a>. When you see that a creator has
+              a <a href="#why_are_rewards_mandatory">history of trust</a>. When you see that a creator has
               consistently paid their funders rewards, and has a history of increasing that amount, no matter
               how tiny it started off, it builds trust.
             </li>
