--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -186,7 +186,7 @@
           <div class="col-lg-4">
             <i class="fa fa-btc fa-5x"></i>
             <h2>Buy pieces</h2>
-            <p>Fund your favorite bands, artists, creators, and small businesses by buying pieces of their brand. Your pieces continuously earn <a href="/FAQ#what_are_rewards">rewards</a> from the moment they are bought, which build up over time. After a creator has sold their initial pieces, users can <a href="/FAQ#what_are_bids_and_asks">bid and sell</a> their pieces to other users if they choose. </p>
+            <p>Fund your favorite bands, artists, creators, and small businesses by buying pieces of their brand. Your pieces <b>automatically and continuously</b>  earn <a href="/FAQ#what_are_rewards">rewards</a> from the moment they are bought, which build up over time. After a creator has sold their initial pieces, users can <a href="/FAQ#what_are_bids_and_asks">bid and sell</a> their pieces to other users if they choose. </p>
             <p><a class="btn btn-default" href="FAQ#what_are_pieces" role="button">Learn more about pieces &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
