--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -171,7 +171,7 @@
       <!-- Wrap the rest of the page in another container to center all the content. -->
 
       <div class="container marketing">
-
+        <hr class="featurette-divider">
         <div id="what_is_bitpieces" class="row featurette">
         <div class="col-md-12">
         <h2 class="featurette-heading">What is <span class="text-muted">Bitpieces? </span></h2>
@@ -179,6 +179,7 @@
             </p>
         </div>
         </div>
+        <hr class="featurette-divider">
         <!-- Three columns of text below the carousel -->
         <div class="row">
           <div class="col-lg-4">
